--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@alchemy/aa-accounts": "^3.12.0",
     "@alchemy/aa-alchemy": "^3.12.0",
     "@alchemy/aa-core": "^3.12.0",
-    "@tanstack/react-query": "^5.28.9",
+    "@rainbow-me/rainbowkit": "^2.1.0",
+    "@tanstack/react-query": "^5.37.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "viem": "^2.8.6"
+    "viem": "^2.12.0",
+    "wagmi": "^2.9.4"
   },
   "devDependencies": {
     "eslint": "^8",
