--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@alchemy/aa-core": "^3.12.0",
     "@rainbow-me/rainbowkit": "^2.1.0",
     "@tanstack/react-query": "^5.37.1",
+    "geist": "^1.3.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
@@ -21,9 +22,15 @@
     "wagmi": "^2.9.4"
   },
   "devDependencies": {
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.3",
+    "clsx": "^2.1.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "framer-motion": "^11.2.6",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
