--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@alchemy/aa-core": "^3.12.0",
     "@rainbow-me/rainbowkit": "^2.1.0",
     "@tanstack/react-query": "^5.37.1",
+    "encoding": "^0.1.13",
     "geist": "^1.3.0",
     "next": "14.2.3",
+    "pino-pretty": "^11.1.0",
     "react": "^18",
     "react-dom": "^18",
     "viem": "^2.12.0",
